edit margins for team

--- a/components/obs/score/Single.scss
+++ b/components/obs/score/Single.scss
@@ -76,13 +76,13 @@
     height: 60px;
     text-align: center;
 
-    span {
-      margin-left: 10px;
+    // span {
+    //   margin-left: 10px;
 
-      &:first-child {
-        margin-left: 0;
-      }
-    }
+    //   &:first-child {
+    //     margin-left: 0;
+    //   }
+    // }
 
     &.p1 {
       left: 385px;
