--- a/components/obs/bracket/BracketBox.module.scss
+++ b/components/obs/bracket/BracketBox.module.scss
@@ -65,13 +65,13 @@ $black: "Satoshi", "Noto Sans JP", sans-serif;
   p {
     margin: 0;
 
-    span {
-      margin-left: 6px;
+    // span {
+    //   margin-left: 6px;
 
-      &:first-child {
-        margin-left: 0;
-      }
-    }
+    //   &:first-child {
+    //     margin-left: 0;
+    //   }
+    // }
   }
 }
 
