--- a/components/obs/next/normal.scss
+++ b/components/obs/next/normal.scss
@@ -111,13 +111,13 @@
       text-align: left;
     }
 
-    span {
-      margin-left: 1rem;
+    // span {
+    //   margin-left: 1rem;
 
-      &:first-child {
-        margin-left: 0;
-      }
-    }
+    //   &:first-child {
+    //     margin-left: 0;
+    //   }
+    // }
 
     .team {
       @include mediumWeight;
