add itosuma custome

--- a/components/obs/next/normal.scss
+++ b/components/obs/next/normal.scss
@@ -48,7 +48,7 @@
     width: 60px;
     margin: 0;
     font-size: 40px;
-    color: var(--main-color);
+    color: var(--sub-color);
     text-align: center;
 
     &.p1 {
