--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -28,6 +28,34 @@
   src: url("/fonts/Mint-Grotesk-ExtraBold-V13.woff2");
 }
 
+@font-face {
+  font-family: "Neue Machina Regular";
+  src: url("/fonts/PPNeueMachina-PlainRegular.otf");
+  size-adjust: 105%;
+}
+@font-face {
+  font-family: "Neue Machina Semibold";
+  src: url("/fonts/PPNeueMachina-PlainSemibold.otf");
+  size-adjust: 105%;
+}
+@font-face {
+  font-family: "Neue Machina Bold";
+  src: url("/fonts/PPNeueMachina-PlainBold.otf");
+  size-adjust: 105%;
+}
+@font-face {
+  font-family: "SA Score";
+  src: url("/fonts/SAScore-PlainSemibold.woff2");
+}
+@font-face {
+  font-family: "IBM Plex Sans JP Text";
+  src: url("/fonts/IBMPlexSansJP-Text.otf");
+}
+@font-face {
+  font-family: "IBM Plex Sans JP Bold";
+  src: url("/fonts/IBMPlexSansJP-Bold.otf");
+}
+
 :root {
   --dark-gray: #111;
   --black: #202025;
